fix: align item for blog item

--- a/wp-content/themes/techcomfort/assets/scss/_blog.scss
+++ b/wp-content/themes/techcomfort/assets/scss/_blog.scss
@@ -25,6 +25,7 @@
   &-item {
     display:         flex;
     justify-content: space-between;
+    align-items:     center;
     width:           100%;
     margin-bottom:   8.8%;
     &:last-child {
